modified:   index.html

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="arrow">↓</div>
     <div class="box">
         <h2>Access Timecard</h2>
-        <p>Log in to ADP and navigate to <strong>Myself → My Timecard</strong>.</p>
+        <p>Log in to wADP and navigate to <strong>Myself → My Timecard</strong>.</p>
     </div>
     <div class="arrow">↓</div>
     <div class="box">
