new file:   flowchart.html 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -1,90 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ADP Note Updating Process Flowchart</title>
-<style>
-    body {
-        font-family: Arial, sans-serif;
-        padding: 20px;
-        background-color: #f8f8f8;
-    }
-    .flowchart {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin-top: 20px;
-    }
-    .box {
-        background-color: #ffffff;
-        border: 2px solid #007bff;
-        border-radius: 5px;
-        padding: 15px;
-        margin: 10px;
-        width: 90%;
-        box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    }
-    .arrow {
-        text-align: center;
-        font-size: 24px;
-        color: #007bff;
-    }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome to My Website</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            padding: 20px;
+            background-color: #f4f4f4;
+        }
+        a {
+            color: #007bff;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
-<h1>ADP Note Updating Process Flowchart</h1>
-<div class="flowchart">
-    <div class="box">
-        <h2>Start</h2>
-        <p>Begin the process when you have time to update your notes.</p>
-    </div>
-    <div class="arrow">↓</div>
-    <div class="box">
-        <h2>Track Interaction</h2>
-        <p>Record residents you've worked with and the duration. For each interaction, note:</p>
-        <ul>
-            <li>Property</li>
-            <li>Activity</li>
-            <li>Program Type</li>
-            <li>Number of Hours</li>
-        </ul>
-    </div>
-    <div class="arrow">↓</div>
-    <div class="box">
-        <h2>Access Timecard</h2>
-        <p>Log in to ADP and navigate to <strong>Myself → My Timecard</strong>.</p>
-    </div>
-    <div class="arrow">↓</div>
-    <div class="box">
-        <h2>Edit Timecard</h2>
-        <p>Click on the three lines beside a completed row to bring up options.</p>
-    </div>
-    <div class="arrow">↓</div>
-    <div class="box">
-        <h2>Add Note/Comment</h2>
-        <p>Select <strong>Add Note</strong> on desktop or <strong>Add Comment</strong> on mobile.</p>
-    </div>
-    <div class="arrow">↓</div>
-    <div class="box">
-        <h2>Enter Data</h2>
-        <p>For each unique program, even if residents are at the same property, create a separate line item:</p>
-        <ul>
-            <li>Beachwood / Family Support Coach Services / CoC / 4 hours</li>
-            <li>Station Place / Family Support Coach Services / PSH / 4 hours</li>
-        </ul>
-        <p>Note: If program names and property names are the same, use the property name for the program name.</p>
-    </div>
-    <div class="arrow">↓</div>
-    <div class="box">
-        <h2>Review and Confirm</h2>
-        <p>Review the list for accuracy and confirm that all programs and interactions are properly noted.</p>
-    </div>
-    <div class="arrow">↓</div>
-    <div class="box">
-        <h2>Complete</h2>
-        <p>Finish the update process and log out or close the application.</p>
-    </div>
-</div>
+    <h1>Welcome to My Website</h1>
+    <p>Please visit the <a href="flowchart.html">ADP Note Updating Process Flowchart</a> page to view the flowchart details.</p>
 </body>
 </html>
