modified:   flowchart.html

--- a/flowchart.html
+++ b/flowchart.html
@@ -26,6 +26,11 @@
         box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         text-align: center;
     }
+    .box img {
+    max-width: 100%;  /* Set the maximum width to 100% of its parent */
+    height: auto;     /* Height is set to auto to maintain the aspect ratio */
+    }
+
     .arrow {
         text-align: center;
         font-size: 24px;
