--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
 <body>
     <h1>Welcome to My Website</h1>
     <p>Please visit the <a href="flowchart.html">ADP Note Updating Process Flowchart</a> page to view the flowchart details.</p>
+    <p>Please visit the <a href="UnitDesignations.html">Unit Designation Dictionary</a> page to view the Unit Designation details.</p>
 </body>
 </html>
