modified:   UnitDesignations.html

--- a/UnitDesignations.html
+++ b/UnitDesignations.html
@@ -7,32 +7,34 @@
 <body>
 <h1>HUD Housing Unit Designations Explained</h1>
 
-<h2>1. Permanent Supportive Housing (PSH)</h2>
+<h2>1. OPH (Other Permanent Housing)</h2>
+<p><strong>Description:</strong> Provides long-term housing that is not classified as Permanent Supportive Housing or Rapid Re-housing. This type of housing is aimed at offering stable housing solutions without the supportive services typically found in PSH.</p>
+
+<h2>2. Permanent Supportive Housing (PSH)</h2>
 <p><strong>Description:</strong> Long-term housing with supportive services aimed at homeless individuals with disabilities. Chronic homelessness and a documented disabling condition are required for entry.</p>
-<p><strong>Locations:</strong> Available at many sites within our network.</p>
-<p><strong>Relevant Program:</strong> Continuum of Care (CoC) Program.</p>
+<p><strong>Locations:</strong> Available at many sites within Housing Hope.</p>
 
-<h2>2. MH PSH (Mental Health Permanent Supportive Housing)</h2>
+<h2>3. MH PSH (Mental Health Permanent Supportive Housing)</h2>
 <p><strong>Description:</strong> A subset of PSH providing housing and mental health services. This program focuses on individuals with significant mental health issues.</p>
-<p><strong>Locations:</strong> Available at a few selected sites.</p>
+<p><strong>Locations:</strong> Available at New Century Village.</p>
 
-<h2>3. Emergency Shelter</h2>
+<h2>4. Emergency Shelter</h2>
 <p><strong>Description:</strong> Provides temporary shelter for up to 53 days. Offers immediate relief and basic necessities to homeless individuals and families.</p>
 <p><strong>Locations:</strong> A house in Stanwood and apartment-style shelter units in Everett.</p>
 
-<h2>4. Teen and Young Parent</h2>
+<h2>5. Teen and Young Parent</h2>
 <p><strong>Description:</strong> Focuses on helping teen and young parents aged 16-24 and their children who are enrolled in the Teen and Young Parent program.</p>
 
-<h2>5. Station Place Beachwood CoC</h2>
+<h2>6. Station Place Beachwood CoC</h2>
 <p><strong>Description:</strong> A few units designated under the CoC program were moved to Station Place but retain their CoC designation, focusing on integrated community support.</p>
 
-<h2>6. Families with Children</h2>
+<h2>7. Families with Children</h2>
 <p><strong>Description:</strong> Houses families specifically, sometimes accommodating incoming newborns, emphasizing a stable environment conducive to family growth.</p>
 
-<h2>7. Veterans (VASH - Veterans Affairs Supportive Housing)</h2>
+<h2>8. Veterans (VASH - Veterans Affairs Supportive Housing)</h2>
 <p><strong>Description:</strong> Combines HUD housing vouchers with VA supportive services to help veterans who are homeless. Referrals for these units typically come from the VA, and there is an additional VA staff member for case management.</p>
 
-<h2>8. Young Adults</h2>
+<h2>9. Young Adults</h2>
 <p><strong>Description:</strong> Houses young adults, aiming to intervene early and provide stability to prevent long-term homelessness.</p>
 
 </body>
