--- a/UnitDesignations.html
+++ b/UnitDesignations.html
@@ -68,8 +68,8 @@
     
     <div class="card" id="coc">
         <div class="card-body">
-            <h2 class="card-title">Station Place Beachwood CoC</h2>
-            <p class="card-text">A few units designated under the CoC program were moved to Station Place but retain their CoC designation, focusing on integrated community support.</p>
+            <h2 class="card-title">CoC/Station Place Beachwood CoC</h2>
+            <p class="card-text">Permanent CoC units would function similarly to PSH in that they aim to provide stable, long-term housing to help individuals and families achieve and maintain housing stability. However, they might differ in terms of the specific target populations, the types of services provided, and the funding structures. A few units designated under the CoC program were moved to Station Place but retain their CoC designation, focusing on integrated community support.</p>
         </div>
     </div>
     
