--- a/Prog.html
+++ b/Prog.html
@@ -3,84 +3,96 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Housing Hope Participant Enrollment Guide</title>
+    <title>Participant Enrollment Guide - Housing Hope</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            line-height: 1.5;
             margin: 0;
             padding: 0;
-            background: #f4f4f4;
+            background: #f7f7f7;
             color: #333;
         }
         .container {
             width: 80%;
             margin: auto;
-            overflow: hidden;
+            padding: 20px;
         }
         .guide-header {
-            background: #35424a;
-            color: #ffffff;
+            background: #005a87;
+            color: #fff;
             padding: 20px;
             text-align: center;
+            border-radius: 6px;
+            margin-bottom: 20px;
         }
-        img {
+        .step {
+            background: #fff;
+            padding: 20px;
+            margin-bottom: 20px;
+            border-radius: 6px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+        .step img {
             max-width: 100%;
             height: auto;
-            display: block;
-            margin: 20px 0;
+            border-radius: 6px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+        .step-header {
+            margin-bottom: 10px;
+            color: #005a87;
         }
         .caption {
-            margin: 0 0 20px 0;
+            background: #e1f5fe;
             padding: 10px;
-            background: #e4e4e4;
-            border-left: 6px solid #333;
+            margin-top: 10px;
+            border-left: 4px solid #005a87;
+            border-radius: 6px;
         }
-        .step-description {
-            padding: 10px;
-            background: #ffffff;
-            border: 1px solid #ddd;
-            margin-bottom: 20px;
+        .caption strong {
+            color: #005a87;
         }
     </style>
 </head>
 <body>
-    <header class="guide-header">
-        <h1>Housing Hope Participant Enrollment Guide</h1>
-    </header>
     <div class="container">
+        <header class="guide-header">
+            <h1>How to Find a Resident's Program Enrollment</h1>
+        </header>
+        
         <!-- Step 1 -->
-        <section class="step-description">
-            <h2>Navigate the Dashboard</h2>
+        <div class="step">
+            <h2 class="step-header">Step 1: Navigate the Dashboard</h2>
             <p>Begin by selecting 'Dashboard' on the left sidebar to access your main control panel within the Apricot database.</p>
-        </section>
+        </div>
 
-            <h2>Access Participant Profiles</h2>
+        <!-- Step 2 -->
+        <div class="step">
+            <h2 class="step-header">Step 2: Access Participant Profiles</h2>
             <p>Click on 'Search Records' > 'Participant Profile' to look up individuals enrolled in Housing Hope's programs.</p>
-        </section>
+        </div>
 
         <!-- Step 3 -->
-        <section class="step-description">
-            <h2>Locate Participant</h2>
+        <div class="step">
+            <h2 class="step-header">Step 3: Locate Participant</h2>
             <p>Enter the name of the participant in the search bar to retrieve their profile. Remember, accuracy in spelling is key to finding the correct profile.</p>
-        </section>
+        </div>
 
         <!-- Step 4 -->
-        <section class="step-description">
-            <h2>Review the Participant's Details</h2>
+        <div class="step">
+            <h2 class="step-header">Step 4: Review the Participant's Details</h2>
             <p>Click on any gray text link within the participant's document. This action will direct you to their full profile where you can view comprehensive information about their program involvement.</p>
-        </section>
+        </div>
 
-        <!-- Photo Caption -->
-        <section class="steps">
-            <img src="a.png" alt="Accessing the Document Folder">
+        <!-- Photo and Caption -->
+        <div class="step">
+            <img src="path-to-your-image.png" alt="Accessing the Document Folder">
             <div class="caption">
-                <h2>"Accessing a Participant’s Document Folder"</h2>
-                <p>After locating the participant’s name, proceed to:</p>
-                <p><strong>Enter Participant's Record</strong>: Click on the participant’s name to view their individual profile. Make sure you are on the right profile before moving on.</p>
-                <p><strong>Open Document Folder</strong>: Follow the mouse cursor and click on 'View Folder' as indicated. This will open the participant’s document folder, which contains detailed enrollment information and other pertinent records.</p>
+                <h2 class="step-header">Accessing a Participant’s Document Folder</h2>
+                <p>After locating the participant’s name, follow the mouse cursor and click on 'View Folder' as indicated to access all documents related to the participant. This is where you'll find detailed enrollment information and other important records.</p>
             </div>
-        </section>
+        </div>
     </div>
 </body>
 </html>
