modified:   Prog.html

--- a/Prog.html
+++ b/Prog.html
@@ -87,7 +87,7 @@
 
         <!-- Photo and Caption -->
         <div class="step">
-            <img src="path-to-your-image.png" alt="Accessing the Document Folder">
+            <img src="a.png" alt="Accessing the Document Folder">
             <div class="caption">
                 <h2 class="step-header">Accessing a Participant’s Document Folder</h2>
                 <p>After locating the participant’s name, follow the mouse cursor and click on 'View Folder' as indicated to access all documents related to the participant. This is where you'll find detailed enrollment information and other important records.</p>
