--- a/Prog.html
+++ b/Prog.html
@@ -85,12 +85,21 @@
             <p>Click on any gray text link within the participant's document. This action will direct you to their full profile where you can view comprehensive information about their program involvement.</p>
         </div>
 
-        <!-- Photo and Caption -->
+        <!-- Existing Photo and Caption -->
         <div class="step">
             <img src="a.png" alt="Accessing the Document Folder">
             <div class="caption">
                 <h2 class="step-header">Accessing a Participant’s Document Folder</h2>
                 <p>After locating the participant’s name, follow the mouse cursor and click on 'View Folder' as indicated to access all documents related to the participant. This is where you'll find detailed enrollment information and other important records.</p>
+            </div>
+        </div>
+
+        <!-- New Photo and Caption -->
+        <div class="step">
+            <img src="b.png" alt="Program Enrollment Confirmation">
+            <div class="caption">
+                <h2 class="step-header">Guaranteed Accurate Program Enrollment</h2>
+                <p>This visual guide ensures that the 'Program Enrollment' section always contains the correct, up-to-date enrollment status for each resident. By following these steps, you can verify that all program participation details are accurate and reflect the latest information.</p>
             </div>
         </div>
     </div>
