modified:   Prog.html

--- a/Prog.html
+++ b/Prog.html
@@ -82,7 +82,7 @@
         <!-- Step 4 -->
         <div class="step">
             <h2 class="step-header">Step 4: Review the Participant's Details</h2>
-            <p>Click on any gray text link within the participant's document. This action will direct you to their full profile where you can view comprehensive information about their program involvement.</p>
+            <p>Click on the greenish text that contains the Resident name. This action will direct you to their full profile where you can view comprehensive demographic information, as well as links to their family record, and their unit.</p>
         </div>
 
         <!-- Existing Photo and Caption -->
