modified:   flowchart.html

--- a/flowchart.html
+++ b/flowchart.html
@@ -71,6 +71,7 @@
             <li>Program Type</li>
             <li>Number of Hours</li>
         </ul>
+    <H3><a href="Prog.html">Click here to see how to find a Resident's Program Enrollment</a></H3>
     </div>
     <div class="arrow">↓</div>
     <div class="box">
