--- a/flowchart.html
+++ b/flowchart.html
@@ -72,6 +72,7 @@
             <li>Number of Hours</li>
         </ul>
     <H3><a href="Prog.html">Click here to see how to find a Resident's Program Enrollment</a></H3>
+    <H4><a href="https://apricot.socialsolutions.com/report/run/report_id/138">Click here for a list of the program enrollment for all of your resident's. Click export to download an Excel Spreadsheet.</a></H4>
     </div>
     <div class="arrow">↓</div>
     <div class="box">
