modified:   Prog.html

--- a/Prog.html
+++ b/Prog.html
@@ -99,7 +99,7 @@
             <img src="b.png" alt="Program Enrollment Confirmation">
             <div class="caption">
                 <h2 class="step-header">Guaranteed Accurate Program Enrollment</h2>
-                <p>This visual guide ensures that the 'Program Enrollment' section always contains the correct, up-to-date enrollment status for each resident. By following these steps, you can verify that all program participation details are accurate and reflect the latest information.</p>
+                <p>Your Apricot Admins ensure that the 'Program Enrollment' section always contains the correct, up-to-date enrollment status for each resident. By following these steps, you can verify that all program participation details are accurate and reflect the latest information.</p>
             </div>
         </div>
     </div>
