--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
     <h1>Welcome to My Website</h1>
     <p>Please visit the <a href="flowchart.html">ADP Note Updating Process Flowchart</a> page to view the flowchart details.</p>
     <p>Please visit the <a href="UnitDesignations.html">Unit Designation Dictionary</a> page to view the Unit Designation details.</p>
+    <p>Please visit the <a href="Prog.html">Program Enrollment Identification Guide</a> page to view how to see this information for an individual resident.</p>
 </body>
 </html>
