modified:   Prog.html 	modified:   UnitDesignations.html 	modified:   flowchart.html

--- a/flowchart.html
+++ b/flowchart.html
@@ -116,5 +116,6 @@
         <p>Finish the update process and log out or close the application.</p>
     </div>
 </div>
+<a href="index.html"><p>Home</p></a>
 </body>
 </html>
