modified:   flowchart.html

--- a/flowchart.html
+++ b/flowchart.html
@@ -98,7 +98,7 @@
         <h2>Enter Data</h2>
         <p>For each unique program, even if residents are at the same property, create a separate line item:</p>
         <ul>
-            <li>Beachwood / Family Support Coach Services / CoC / 4 hours</li>
+            <li>Station Place / Family Support Coach Services / CoC / 4 hours</li>
             <li>Station Place / Family Support Coach Services / PSH / 4 hours</li>
         </ul>
         <p>Note: If program names and property names are the same, use the property name for the program name.</p>
