--- a/index.html
+++ b/index.html
@@ -6,52 +6,72 @@
     <title>Housing Hope Data Team Infobase</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             line-height: 1.6;
             margin: 0;
             padding: 0;
             color: #333;
-            background-color: #f4f4f4;
+            background-color: #fff; /* Lighter background */
         }
         .container {
-            width: 80%;
+            width: 90%; /* More width for less crammed content */
             margin: auto;
             overflow: hidden;
+            padding: 20px 0; /* Added padding */
         }
         header {
-            background: #333;
+            background: #505050; /* Softer color */
             color: #fff;
-            padding-top: 30px;
+            padding-top: 20px;
             min-height: 70px;
-            border-bottom: #0779e4 3px solid;
+            border-bottom: #4c87ed 3px solid; /* Softer blue */
         }
         header a {
-            color: #fff;
+            color: #d0d0d0; /* Softer color for text */
             text-decoration: none;
             text-transform: uppercase;
             font-size: 16px;
         }
         nav {
             float: right;
-            margin-top: 10px;
+            margin-top: 0; /* Align with the title */
         }
         nav a {
-            margin-left: 20px;
+            margin: 0 15px; /* Uniform margin */
+            padding: 5px 0; /* Easier to click */
         }
         article {
-            padding: 20px;
-            background: #fff;
-            border-left: #0779e4 4px solid;
+            padding: 40px; /* Increased padding */
+            background: #fafafa; /* Soft shade of white */
+            border-left: #4c87ed 5px solid; /* Accentuating the border */
+            margin-bottom: 20px; /* Space before footer */
         }
         footer {
-            background-color: #333;
+            background-color: #505050;
             color: #fff;
             text-align: center;
-            padding: 10px;
+            padding: 15px;
             position: fixed;
             left: 0;
             bottom: 0;
             width: 100%;
+            font-size: 0.8em; /* Smaller font for less prominence */
+        }
+        @media screen and (max-width: 768px) {
+            .container {
+                width: 95%; /* More space on smaller screens */
+            }
+            nav {
+                float: none;
+                text-align: center; /* Center on small screens */
+            }
+            nav a {
+                display: block; /* Stack links */
+                margin: 10px 0;
+            }
+            header {
+                padding-top: 20px; /* Less padding on small screens */
+            }
         }
     </style>
 </head>
