modified:   UnitDesignations.html

--- a/UnitDesignations.html
+++ b/UnitDesignations.html
@@ -110,7 +110,7 @@
         </div>
         
         <div class="card" id="vash">
-            <div the="card-body">
+            <div class="card-body">
                 <h2 class="card-title">Veterans (VASH - Veterans Affairs Supportive Housing)</h2>
                 <p class="card-text">Combines HUD housing vouchers with VA supportive services to help veterans who are homeless. Referrals typically come from the VA, and an additional VA staff member helps with case management.</p>
             </div>
