--- a/Prog.html
+++ b/Prog.html
@@ -4,51 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Participant Enrollment Guide - Housing Hope</title>
+    <!-- Bootstrap CSS for consistency -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            line-height: 1.5;
-            margin: 0;
-            padding: 0;
+            padding-top: 5rem; /* consistent top padding */
             background: #f7f7f7;
             color: #333;
         }
         .container {
-            width: 80%;
-            margin: auto;
-            padding: 20px;
+            padding: 2rem 1rem; /* similar padding to the template */
         }
         .guide-header {
             background: #005a87;
             color: #fff;
-            padding: 20px;
+            padding: 2rem;
             text-align: center;
-            border-radius: 6px;
-            margin-bottom: 20px;
+            border-radius: 0.3rem; /* rounded corners similar to the template */
+            margin-bottom: 1rem;
         }
         .step {
             background: #fff;
-            padding: 20px;
-            margin-bottom: 20px;
-            border-radius: 6px;
+            padding: 2rem;
+            margin-bottom: 1rem;
+            border-radius: 0.3rem;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
         .step img {
+            display: block;
             max-width: 100%;
             height: auto;
-            border-radius: 6px;
+            border-radius: 0.3rem;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-        }
-        .step-header {
-            margin-bottom: 10px;
-            color: #005a87;
+            margin: 1rem auto; /* center align */
         }
         .caption {
             background: #e1f5fe;
-            padding: 10px;
-            margin-top: 10px;
+            padding: 1rem;
+            margin-top: 1rem;
             border-left: 4px solid #005a87;
-            border-radius: 6px;
+            border-radius: 0.3rem;
         }
         .caption strong {
             color: #005a87;
@@ -56,36 +52,51 @@
     </style>
 </head>
 <body>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">HH Data Team Infobase</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Prog.html">Program Guide</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="UnitDesignations.html">Unit Dictionary</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="flowchart.html">ADP Flowchart</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <div class="container">
         <header class="guide-header">
             <h1>How to Find a Resident's Program Enrollment</h1>
         </header>
         
-        <!-- Step 1 -->
         <div class="step">
             <h2 class="step-header">Step 1: Navigate the Dashboard</h2>
             <p>Begin by selecting 'Dashboard' on the left sidebar to access your main control panel within the Apricot database.</p>
         </div>
-
-        <!-- Step 2 -->
         <div class="step">
             <h2 class="step-header">Step 2: Access Participant Profiles</h2>
             <p>Click on 'Search Records' > 'Participant Profile' to look up individuals enrolled in Housing Hope's programs.</p>
         </div>
-
-        <!-- Step 3 -->
         <div class="step">
             <h2 class="step-header">Step 3: Locate Participant</h2>
             <p>Enter the name of the participant in the search bar to retrieve their profile. Remember, accuracy in spelling is key to finding the correct profile.</p>
         </div>
-
-        <!-- Step 4 -->
         <div class="step">
             <h2 class="step-header">Step 4: Review the Participant's Details</h2>
             <p>Click on the greenish text that contains the Resident name. This action will direct you to their full profile where you can view comprehensive demographic information, as well as links to their family record, and their unit.</p>
         </div>
-
-        <!-- Existing Photo and Caption -->
         <div class="step">
             <img src="a.png" alt="Accessing the Document Folder">
             <div class="caption">
@@ -93,8 +104,6 @@
                 <p>After locating the participant’s name, follow the mouse cursor and click on 'View Folder' as indicated to access all documents related to the participant. This is where you'll find detailed enrollment information and other important records.</p>
             </div>
         </div>
-
-        <!-- New Photo and Caption -->
         <div class="step">
             <img src="b.png" alt="Program Enrollment Confirmation">
             <div class="caption">
@@ -103,6 +112,8 @@
             </div>
         </div>
     </div>
-<a href="index.html"><p>Home</p></a>
+    <a href="index.html" class="btn btn-dark" style="position: fixed; bottom: 20px; right: 20px;">Home</a>
+    <!-- Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
