repair:   flowchart.html

--- a/flowchart.html
+++ b/flowchart.html
@@ -94,6 +94,7 @@
                 <p>Begin the process when you have time to update your notes.</p>
             </div>
             <div class="arrow">↓</div>
+            <div class="box"></div>
             <div class="track-interaction">
                 <p>Record residents you've worked with and the duration. For each interaction, note:</p>
                 <ul>
@@ -104,6 +105,7 @@
                 </ul>
                 <a href="Prog.html">Click here to see how to find a Resident's Program Enrollment</a><br>
                 <a href="https://apricot.socialsolutions.com/report/run/report_id/138">Click here for a list of the program enrollment for all of your residents. Click export to download an Excel Spreadsheet.</a>
+            </div>
             </div>
             <div class="arrow">↓</div>
             <div class="box">
