reapair:   flowchart.html

--- a/flowchart.html
+++ b/flowchart.html
@@ -94,8 +94,7 @@
                 <p>Begin the process when you have time to update your notes.</p>
             </div>
             <div class="arrow">↓</div>
-            <div class="box"></div>
-            <div class="track-interaction">
+            <div class="box">
                 <p>Record residents you've worked with and the duration. For each interaction, note:</p>
                 <ul>
                     <li>Property</li>
