modified:   flowchart.html

--- a/flowchart.html
+++ b/flowchart.html
@@ -95,6 +95,7 @@
             </div>
             <div class="arrow">↓</div>
             <div class="box">
+                <h2>Record Hours Spent Working With/Regarding Residents</h2>
                 <p>Record residents you've worked with and the duration. For each interaction, note:</p>
                 <ul>
                     <li>Property</li>
