modified:   flowchart.html

--- a/flowchart.html
+++ b/flowchart.html
@@ -125,6 +125,7 @@
                 <p>Select <strong>Add Note</strong> on desktop or <strong>Add Comment</strong> on mobile.</p>
             </div>
             <div class="arrow">↓</div>
+            <div class="flowchart">
             <div class="box">
                 <h2>Enter Data</h2>
                 <p>For each unique program, even if residents are at the same property, create a separate line item:</p>
@@ -134,6 +135,7 @@
                 </ul>
                 <p>Note: If program names and property names are the same, use the property name for the program name.</p>
                 <img src="13.png" />
+            </div>
             </div>
             <div class="arrow">↓</div>
             <div class="box">
