--- a/flowchart.html
+++ b/flowchart.html
@@ -104,8 +104,12 @@
                     <li>Program Type</li>
                     <li>Number of Hours</li>
                 </ul>
-                <h3><a href="Prog.html">Click here to see how to find a Resident's Program Enrollment</a></h3><br>
-                <h4><a href="https://apricot.socialsolutions.com/report/run/report_id/138">Click here for a list of the program enrollment for all of your residents. Click export to download an Excel Spreadsheet.</a></h4>
+                <h3 style="margin-top: 20px; margin-bottom: 10px;">
+                    <a href="Prog.html">Click here to see how to find a Resident's Program Enrollment</a>
+                </h3>
+                <h4 style="margin-top: 0; margin-bottom: 20px;">
+                    <a href="https://apricot.socialsolutions.com/report/run/report_id/138">Click here for a list of the program enrollment for all of your residents. Click export to download an Excel Spreadsheet.</a>
+                </h4>
             </div>
             </div>
             <div class="arrow">↓</div>
