modified:   Prog.html

--- a/Prog.html
+++ b/Prog.html
@@ -82,8 +82,8 @@
         </header>
         
         <div class="step">
-            <h2 class="step-header">Step 1: Navigate the Dashboard</h2>
-            <p>Begin by selecting 'Dashboard' on the left sidebar to access your main control panel within the Apricot database.</p>
+            <h2 class="step-header">Step 1: Navigate to the Dashboard</h2>
+            <p>Begin by clicking on the Apricot logo on the left-upper corner of the screen to access your main control panel within the Apricot database.</p>
         </div>
         <div class="step">
             <h2 class="step-header">Step 2: Access Participant Profiles</h2>
